--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CommandBoo ${version}</title>
+<title>CommandBook ${version}</title>
 <style>
 body {
   margin: 0;
