Fixed issues in README.html.

--- a/README.html
+++ b/README.html
@@ -19,6 +19,7 @@ body {
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   box-shadow: 0 0 2px #999;
+  -webkit-box-shadow: 0 0 3px #999;
 }
 a img {
   border: 0;
@@ -66,8 +67,8 @@ h2 {
 
 <div id="wrapper">
 
-<h1><img style="float: right; margin: 0 0 10px 10px" src="images/package.png" alt=""> CommandBook ${version}</h1>
-<p>Thanks for downloading CommandBook!</p>
+<h1>CommandBook ${version}</h1>
+<p>Thanks for choosing CommandBook!</p>
 <h2>First Steps</h2>
 
 <p>Now, to begin, you want to:</p>
