Mention homeconvert.py in README.html.

--- a/README.html
+++ b/README.html
@@ -129,6 +129,13 @@ h2 + * {
     <div class="section">
         <h2>Common Issues</h2>
         
+        <h3>What's homeconvert.py?</h3>
+        <p>
+            It is a Python script (you need to install Python and run the script through
+            command prompt or command line) to convert homes from other plugins
+            (namely MyHomes and Warpz0r at the moment).
+        </p>
+        
         <h3>${project.name} doesn't seem to work.</h3>
         <p>
             Two common mistakes include forgetting to install WorldEdit
